[project]
name = "route-manager"
version = "0.1.0"
description = "A simple GUI application to manage network routes on macOS."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" } 
authors = [
    { name = "Your Name", email = "you@example.com" },
]
dependencies = [
    "netifaces>=0.11.0",
]

[project.scripts]
route-manager = "wifi_macOS:main" # Assuming your main function is called 'main' in wifi_macOS.py

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# This tells hatch to include the wifi_macOS.py file directly in the wheel.
# It assumes wifi_macOS.py is in the root of your project directory (Route_Manager).
packages = ["wifi_macOS.py"]